tests/untried/neg/nopredefs.scala
import Predef.{Set as _, *}

object Test {
  val x = Map(1 -> 2)
  val y = Set(3)
}
